--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -4,11 +4,30 @@
     <title>Forgeddit</title>
     <%= csrf_meta_tags %>
 
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
+    <meta name="viewport" content="width=device-width, initial-scale=1">
+    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css" integrity="sha384-BVYiiSIFeK1dGmJRAkycuHAHRg32OmUcww7on3RYdg4Va+PmSTsz/K68vbdEjh4u" crossorigin="anonymous">
+    <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js" integrity="sha384-Tc5IQib027qvyjSMfHjOMaLkfuWVxZxUPnCJA7l2mCWNIpG9mGCD8wGNIcPD7Txa" crossorigin="anonymous"></script>
+
     <%= stylesheet_link_tag    'application', media: 'all', 'data-turbolinks-track': 'reload' %>
     <%= javascript_include_tag 'application', 'data-turbolinks-track': 'reload' %>
   </head>
 
   <body>
+    <div class="container">
+      <nav class='navbar navbar-default'>
+        <ul class="nav navbar-nav">
+          <% if current_user %>
+            <p class="navbar-text">Signed in as <%= current_user.username %></p>
+            <li><%= link_to "Log out", session_path, method: :delete %></li>
+          <% else %>
+            <li><%= link_to "Log in", new_session_path %></li>
+            <li><%= link_to "Sign up", new_user_path %></li>
+          <% end %>
+
+        </ul>
+      </nav>
     <%= yield %>
+    </div>
   </body>
 </html>
