--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -19,11 +19,19 @@
         <ul class="nav navbar-nav">
           <% if current_user %>
             <p class="navbar-text">Signed in as <%= current_user.username %></p>
-            <li><%= link_to "Log out", session_path, method: :delete %></li>
+            <li><%= link_to "Log Out", session_path, method: :delete %></li>
+            <li><%= link_to "View Profile", user_path(current_user.id) %></li>
           <% else %>
             <li><%= link_to "Log in", new_session_path %></li>
             <li><%= link_to "Sign up", new_user_path %></li>
           <% end %>
+        </ul>
+        <ul id="post_list_links" class="nav navbar-nav navbar-right">
+
+          <% if current_user %>
+            <li><%= link_to "Your Posts", user_posts_path(current_user.id) %></li>
+          <% end %>
+            <li><%= link_to "All Posts", posts_path %></li>
 
         </ul>
       </nav>
