Added ability to create, edit, and delete a post

--- a/app/views/posts/index.html.erb
+++ b/app/views/posts/index.html.erb
@@ -5,6 +5,10 @@
 <hr>
 
 <% @posts.each do |post| %>
-  <%= link_to "#{post.name}", post_path(post.id) %>
+  <%= link_to "#{post.name}", post.link %>
+  <% if post.user_id == current_user.id %>
+    <%= link_to "Edit", edit_post_path(post.id), class: 'btn btn-default btn-success btn-sm' %>
+    <%= link_to "Delete", post_path(post.id), method: :delete, class: 'btn btn-default btn-danger btn-sm' %>
+  <% end %>
   <hr>
 <% end %>
