--- a/app/views/users/new.html.erb
+++ b/app/views/users/new.html.erb
@@ -1,5 +1,9 @@
-<% @user.errors.full_messages.each do |error| %>
-  <%= error %>!
+<% if @user.errors.any? %>
+  <div class="alert alert-danger">
+    <% @user.errors.full_messages.each do |error| %>
+      <p><%= error %>!</p>
+    <% end %>
+  </div>
 <% end %>
 
 <h4>Create an account!</h4>
@@ -16,7 +20,6 @@
 
   <%= f.label :password_confirmation %>
   <%= f.password_field :password_confirmation, class: "form-control" %>
-
 
   <hr>
 
