--- a/app/assets/stylesheets/application.css
+++ b/app/assets/stylesheets/application.css
@@ -20,3 +20,22 @@ span {
 #post_list_links {
   padding-right: 10px;
 }
+
+#content {
+  display: inline-block;
+}
+
+#options {
+  display: inline-block;
+  vertical-align: center;
+}
+
+#post_options {
+  display: inline-block;
+}
+
+#created_at {
+  display: inline-block;
+  vertical-align: center;
+  float: right;
+}
