--- a/app/views/posts/index.html.erb
+++ b/app/views/posts/index.html.erb
@@ -1,14 +1,22 @@
-<p>
-  Here are all the posts!
-</p>
+<h4>Here are all the posts!</h4>
 
 <hr>
 
 <% @posts.each do |post| %>
-  <%= link_to "#{post.name}", post.link %>
-  <% if post.user_id == current_user.id %>
-    <%= link_to "Edit", edit_post_path(post.id), class: 'btn btn-default btn-success btn-sm' %>
-    <%= link_to "Delete", post_path(post.id), method: :delete, class: 'btn btn-default btn-danger btn-sm' %>
-  <% end %>
+  <div>
+    <div id="post_options">
+      <%= link_to "#{post.name}", post.link %>
+      <%= link_to "View Comments", post_comments_path(post.id), class: 'btn btn-default btn-info btn-xs' %>
+      <% if current_user %>
+        <% if post.user_id == current_user.id %>
+          <%= link_to "Edit", edit_post_path(post.id), class: 'btn btn-default btn-success btn-xs' %>
+          <%= link_to "Delete", post_path(post.id), method: :delete, class: 'btn btn-default btn-danger btn-xs' %>
+        <% end %>
+      <% end %>
+    </div>
+    <div id="created_at">
+      <span>Post created: </span><%= post.created_at %>
+    </div>
+  </div>
   <hr>
 <% end %>
