--- a/app/views/comments/post_comments.html.erb
+++ b/app/views/comments/post_comments.html.erb
@@ -8,7 +8,7 @@
 
 <% @comments.each do |comment| %>
 <div>
-  <div id="content">
+  <div id="main">
     <span><%= User.find(comment.user_id).username %> says</span>:
     <%= comment.content %>
   </div>
