--- a/app/views/comments/new.html.erb
+++ b/app/views/comments/new.html.erb
@@ -11,7 +11,7 @@
 <%= form_for @comment, url: post_comments_url(@post.id) do |f| %>
 
   <%= f.label :content %>
-  <%= f.text_field :content, class: "form-control" %>
+  <%= f.text_field :content, class: "form-control", maxlength: "140" %>
 
   <%= f.hidden_field :user_id, value: current_user.id %>
   <%= f.hidden_field :post_id, value: @post.id %>
