--- a/app/views/posts/new.html.erb
+++ b/app/views/posts/new.html.erb
@@ -11,7 +11,7 @@
 <%= form_for @post do |f| %>
 
   <%= f.label :name %>
-  <%= f.text_field :name, class: "form-control" %>
+  <%= f.text_field :name, class: "form-control", maxlength: "30" %>
 
   <%= f.label :link %>
   <%= f.text_field :link, class: "form-control" %>
