--- a/app/views/posts/edit.html.erb
+++ b/app/views/posts/edit.html.erb
@@ -1,5 +1,9 @@
-<% @post.errors.full_messages.each do |error| %>
-  <%= error %>!
+<% if @post.errors.any? %>
+  <div class="alert alert-danger">
+    <% @post.errors.full_messages.each do |error| %>
+      <p><%= error %>!</p>
+    <% end %>
+  </div>
 <% end %>
 
 <h4>Edit the details of your post!</h4>
