--- a/app/views/users/edit_password.html.erb
+++ b/app/views/users/edit_password.html.erb
@@ -1,6 +1,9 @@
 <% if @empty_field %>
-  <%= @empty_field %>!
+  <div class="alert alert-danger">
+    <%= @empty_field %>
+  </div>
 <% end %>
+
 
 <% current_user.errors.full_messages.each do |error| %>
   <%= error %>!
