--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -30,6 +30,7 @@
           <% if current_user %>
             <li><%= link_to "Create Post", new_post_path %>
             <li><%= link_to "Your Posts", user_posts_path(current_user.id) %></li>
+            <li><%= link_to "Your Comments", user_comments_path(current_user.id) %>
           <% end %>
             <li><%= link_to "All Posts", posts_path %></li>
         </ul>
