--- a/app/views/comments/post_comments.html.erb
+++ b/app/views/comments/post_comments.html.erb
@@ -4,7 +4,7 @@
 
 <h4>Comments for this post:</h4>
 
-<%= link_to "#{@post.name}", @post.link %>
+<%= link_to "#{@post.name}", post_path(@post.id) %>
 
 <hr>
 
