--- a/app/views/users/edit_password.html.erb
+++ b/app/views/users/edit_password.html.erb
@@ -4,9 +4,12 @@
   </div>
 <% end %>
 
-
-<% current_user.errors.full_messages.each do |error| %>
-  <%= error %>!
+<% if current_user.errors.any? %>
+  <div class="alert alert-danger">
+    <% current_user.errors.full_messages.each do |error| %>
+      <%= error %>!
+    <% end %>
+  </div>
 <% end %>
 
 <h4>Update your password!</h4>
