--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -29,10 +29,10 @@
         <ul id="post_list_links" class="nav navbar-nav navbar-right">
           <% if current_user %>
             <li><%= link_to "Create Post", new_post_path %>
-            <li><%= link_to "Your Posts", user_posts_path(current_user.id) %></li>
-            <li><%= link_to "Your Comments", user_comments_path(current_user.id) %>
+            <li><%= link_to "Your Posts", user_posts_path %></li>
+            <li><%= link_to "Your Comments", user_comments_path %>
           <% end %>
-            <li><%= link_to "All Posts", posts_path %></li>
+            <li><%= link_to "All Posts", root_path %></li>
         </ul>
       </nav>
     <%= yield %>
